new X() -> X.valueOf() as per spotbugs